--- a/.editorconfig
+++ b/.editorconfig
@@ -276,6 +276,8 @@ csharp_preserve_single_line_statements = true
 # IDE0060: Remove unused parameter
 dotnet_diagnostic.IDE0060.severity = warning
 
+csharp_style_namespace_declarations = block_scoped:warning
+
 ######################
 ## C# UNITY RULESET ##
 ######################
