--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,7 @@ root = true
 # Don't use tabs for indentation.
 [*]
 indent_style = space
+end_of_line = lf
 #charset = utf-8
 charset = utf-8-bom
 # (Please don't specify an indent_size here; that has too many unintended consequences.)
@@ -21,6 +22,7 @@ indent_size = 4
 insert_final_newline = true
 charset = utf-8-bom
 trim_trailing_whitespace = true
+end_of_line = lf
 
 # JSON files
 [*.json]
