Implements logic to switch between ghost chasing a track (for scatter state) or chasing pakpak

--- a/Assets/Pakpak3D/Code/Scripts/Pakpak3D.asmdef
+++ b/Assets/Pakpak3D/Code/Scripts/Pakpak3D.asmdef
@@ -17,7 +17,8 @@
         "GUID:d60799ab2a985554ea1a39cd38695018",
         "GUID:15fc0a57446b3144c949da3e2b9737a9",
         "GUID:df380645f10b7bc4b97d4f5eb6303d95",
-        "GUID:4307f53044263cf4b835bd812fc161a4"
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:f24cf67903b27ae498b3069ecc30cc11"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
